# swe-learn

./: .eslintrc.json  .gitignore  .lintstagedrc.json  LICENSE  README.md  commitlint.config.js  dune-project  dune-workspace  nx.json  package-lock.json  package.json  tsconfig.base.json  tsconfig.json
.github/workflows/: ci.yml
.husky/: pre-commit  pre-push
apps/go-hello/: README.md  go.mod  main.go  main_test.go  project.json
apps/java-hello/: README.md  pom.xml  project.json
apps/java-hello/src/main/java/com/wahidyankf/: App.java
apps/java-hello/src/test/java/com/wahidyankf/: AppTest.java
apps/node-hello/: README.md  package-lock.json  package.json  project.json  tsconfig.json  tsconfig.tsbuildinfo  vitest.config.ts
apps/node-hello/src/: env.d.ts  main.test.ts  main.ts
apps/ocaml-hello/: README.md  project.json
apps/ocaml-hello/test/: dune  test_main.ml
apps/python-hello/: README.md  project.json  pyproject.toml
apps/python-hello/src/: main.py
apps/python-hello/tests/: test_main.py
libs/go-hello-libs/: README.md  go.mod  project.json
libs/go-hello-libs/datetime/: datetime.go  datetime_test.go
libs/java-hello-libs/: README.md  pom.xml  project.json
libs/java-hello-libs/src/main/java/com/wahidyankf/libs/: Greeter.java
libs/java-hello-libs/src/test/java/com/wahidyankf/libs/: GreeterTest.java
libs/node-hello-libs/: README.md  package.json  project.json  tsconfig.json  vitest.config.ts
libs/node-hello-libs/src/: index.test.ts  index.ts
libs/ocaml-hello-libs/: README.md  dune-project  project.json
libs/ocaml-hello-libs/src/: dune  lib.ml
libs/ocaml-hello-libs/test/: dune  test_lib.ml
libs/python-hello-libs/: README.md  project.json  pyproject.toml
libs/python-hello-libs/python_hello_libs/: __init__.py  __init__.pyi
libs/python-hello-libs/tests/: test_datetime.py
scripts/: check-deps.js  check-deps.sh  format-go.sh  format-java.sh  format-ocaml.sh  format-python.sh
