[tool.poetry]
name = "python-hello"
version = "0.1.0"
description = "FastAPI Hello World application"
authors = ["Your Name <your.email@example.com>"]
packages = [
    { include = "src" }
]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.104.0"
uvicorn = "^0.24.0"
python-hello-libs = {path = "../../libs/python-hello-libs"}

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
httpx = "^0.25.0"
pytest-asyncio = "^0.23.0"
pyright = "^1.1.350"
black = "^24.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
include = ["src", "tests"]
typeCheckingMode = "strict"
useLibraryCodeForTypes = true
reportMissingTypeStubs = false

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
