[tool.poetry]
name = "python-hello-libs"
version = "0.1.0"
description = "Python library for hello world functionality"
authors = ["Your Name <your.email@example.com>"]
packages = [
    { include = "python_hello_libs" }
]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pyright = "^1.1.350"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
include = ["python_hello_libs", "tests"]
typeCheckingMode = "strict"
useLibraryCodeForTypes = true
